--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 flask==1.1.2
-Flask-User==1.0.2.2 # Usaremos Flask-user y no Flask-login para aprovechar los decoradores del primero sobre los roles
+Flask-User==1.0.2.2
+SQLAlchemy==1.3.23 # Necessary dependency to avoid dependency failures
 Flask-SQLAlchemy==2.4.4
 Flask-Script==2.0.6
-Flask-Bcrypt==0.7.1
 Flask-WTF==0.14.3
 WTForms==2.3.3
-SQLAlchemy~=1.3.23
-Werkzeug~=1.0.1
+email-validator==1.1.2 # Necessary dependency for use flask_user
+passlib==1.7.4
