--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
-flask==1.1.2
-Flask-User==1.0.2.2
-SQLAlchemy==1.3.23 # Necessary dependency to avoid dependency failures
-Flask-SQLAlchemy==2.4.4
+bcrypt==3.2.0
+blinker==1.4
+cffi==1.14.5
+click==7.1.2
+cryptography==3.4.6
+dnspython==2.1.0
+email-validator==1.1.2
+Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.4
+Flask-User==1.0.2.2
 Flask-WTF==0.14.3
-WTForms==2.3.3
-email-validator==1.1.2 # Necessary dependency for use flask_user
+idna==3.1
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
 passlib==1.7.4
+pycparser==2.20
+six==1.15.0
+SQLAlchemy==1.3.23
+Werkzeug==1.0.1
+WTForms==2.3.3
