--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cffi==1.14.5
 click==7.1.2
 cryptography==3.4.6
 dnspython==2.1.0
-email-validator==1.1.2
+email-validator==1.1.2 # Necessary dependency for use flask_user
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
@@ -20,6 +20,6 @@ MarkupSafe==1.1.1
 passlib==1.7.4
 pycparser==2.20
 six==1.15.0
-SQLAlchemy==1.3.23
+SQLAlchemy==1.3.23 # Necessary dependency to avoid dependency failures
 Werkzeug==1.0.1
 WTForms==2.3.3
